Need to fix clear icon and spinner in dark mode

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,7 +11,10 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Inter", sans-serif;
-    @apply dark:bg-gray-900 dark:text-white
+    @apply dark:bg-gray-900
+  }
+  .close{
+    @apply dark:bg-white
   }
 
   body {
